--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ember-get-config": "^0.2.4",
     "ember-wormhole": "^0.5.5",
     "popper.js": "^1.12.5",
-    "tooltip.js": "^1.1.5"
+    "tooltip.js": "^1.1.5",
+    "ember-cli-node-assets": "^0.2.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
